# name: TestAsyncDeletion.test_delete_cohortpeople
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_delete_cohortpeople_version
  '''
  SELECT count()
  FROM cohortpeople
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events
  WHERE (team_id = 2
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_groups_when_not_done
  '''
  
  SELECT DISTINCT team_id,
                  $group_0
  FROM events
  WHERE (team_id = 2
         AND $group_0 = 'foo')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 2
         AND person_id = '6ba7b810-9dad-11d1-80b4-00c04fd430c8')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_person_when_not_done
  '''
  
  SELECT DISTINCT team_id,
                  person_id
  FROM events
  WHERE (team_id = 2
         AND person_id = '6ba7b810-9dad-11d1-80b4-00c04fd430c8')
  '''
# ---
# name: TestAsyncDeletion.test_mark_deletions_done_team_when_not_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 2
  '''
# ---
# name: TestAsyncDeletion.test_mark_team_deletions_done
  '''
  
  SELECT DISTINCT team_id
  FROM events
  WHERE team_id = 2
  '''
# ---
